[package]
name = "libfasttree"
version = "0.1.0"
edition = "2021"
description = "A Rust library inspired by libostree, but based on distribution repositories like APT, RPM, Pacman."
authors = ["Michal92299 <michalkaczmarzyk2009@gmail.com>"]  # Replace with your details for crates.io
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/libfasttree"  # Replace with your repo
keywords = ["ostree", "immutable", "package-manager", "rust"]
categories = ["os", "filesystem"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }  # For downloading
zstd = "0.13"  # For decompression
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }  # For local state storage
sha2 = "0.10"  # For hashing
tokio = { version = "1", features = ["full"] }  # For async operations
anyhow = "1.0"  # Error handling
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON handling
tempfile = "3.10"  # Temporary files
walkdir = "2.5"  # Directory walking
ar = "0.9"  # For .deb parsing (ar archives)
xz2 = "0.1"  # For .xz decompression in .deb
rpm = "0.14"  # For RPM parsing (assuming crate exists; if not, implement or find alternative)
libsolv-rs = "0.1"  # Hypothetical; you may need to implement or bind libsolv
