[package]
name = "libfasttree"
version = "0.1.0"
edition = "2021"
description = "A Rust library inspired by libostree, but based on distribution repositories."
authors = ["Michal92299 <michalkaczmarzyk2009@gmail.com>"]
license = "MIT"
repository = "https://github.com/michal92299/libfasttree/"
keywords = ["ostree", "immutable", "package-manager", "rust"]
categories = ["os", "filesystem"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zstd = "0.13"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
walkdir = "2.5"
ar = "0.9"
xz2 = "0.1"
rpm = "0.14"
nix = { version = "0.28", features = ["fs", "user", "ioctl", "process", "mount", "sched"] }
flate2 = "1.0"
xml-rs = "0.8"
hex = "0.4"
tar = "0.4"
rayon = "1.8"
gpgme = "0.11"
bsdiff = "0.1"
merge3 = "0.2"
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
sigstore = "0.7.0"
tss-esapi = "7.2.0"
fastcdc = "1.1.0"
tokio-uring = "0.4.0"
